<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="privacy_html" translatable="false">https://www.qpython.org/privacy.html</string>
    <string name="thanks_link" translatable="false">https://www.qpython.org/contributors.html</string>
    <string name="lower_project" translatable="false">projects</string>
    <string name="qpypi_manager">QPYPI</string>
    <string name="qpypi_up">QPYPI</string>
    <string name="colorvalue_letter_alpha" translatable="false">α</string>
    <string name="colorvalue_letter_red" translatable="false">R</string>
    <string name="colorvalue_letter_green" translatable="false">G</string>
    <string name="colorvalue_letter_blue" translatable="false">B</string>
    <string name="ui_feedback_mail" translatable="false">support@qpython.org</string>
    <string name="log" translatable="false">Log</string>
    <string name="v_version" translatable="false">v %s</string>
    <string name="web" translatable="false">Web</string>
    <string name="arvr" translatable="false">AR/VR</string>
    <string name="action_from_python_three" translatable="false">from_python_three</string>
    <string name="key_saver" translatable="false">saver</string>
    <string name="lib_cache_folder_name" translatable="false">.lib_cache</string>
    <string name="aipy" translatable="false">AIPy</string>
    <string name="slash_project_node" translatable="false">/projects</string>
    <string name="key_hide_noti" translatable="false">hide_noti</string>
    <string name="key_hide_push" translatable="false">hide_push</string>
    <string name="logo" translatable="false">logo</string>
    <string name="level" translatable="false">lv %s</string>
    <string name="color_red" translatable="false">#FFD2483D</string>
    <string name="color_light_gray" translatable="false">#FF595959</string>
    <string name="color_dark_gray" translatable="false">#FF4A4A4A</string>
    <string name="color_yellow" translatable="false">#FFECCD00</string>
    <string name="terminal">Terminal</string>
    <string name="recent">Recent</string>
    <string name="snippet">Snippet</string>
    <string name="script">Script</string>
    <string name="project">Project</string>
    <string name="setting">Setting</string>
    <string name="editor">Editor</string>
    <string name="qpy_editor">QPython Editor</string>
    <string name="community">Community</string>
    <string name="gist">Gist</string>
    <string name="more">More</string>
    <string name="qpypi">Featured</string>
    <string name="sl4a_server">SL4A Server</string>
    <string name="internal_space"><![CDATA[Permissions & Storage]]></string>
    <string name="ftp_server">FTP Server</string>
    <string name="application_terminal">Terminal</string>
    <string name="preferences">Preference</string>
    <string name="new_window">Open new terminal</string>
    <string name="close_window">Close terminal</string>
    <string name="window_list">Terminal list</string>
    <string name="reset">Reset Terminal</string>
    <string name="send_email">Send mail to…</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Open/Close soft keyboard</string>
    <string name="reset_toast_notification">The state at present will be reset.</string>
    <string name="enable_wakelock">Enable wakelock</string>
    <string name="disable_wakelock">Disable wakelock</string>
    <string name="enable_wifilock">Enable WIFI lock</string>
    <string name="disable_wifilock">Disable WIFI lock</string>
    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="send_control_key">Send control key</string>
    <string name="send_fn_key">Send Fn key</string>
    <string name="window_title">Terminal %1$d</string>
    <string name="process_exit_message">Session is over</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/Hide Status bar</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_actionbar_preference">Action Bar</string>
    <string name="summary_actionbar_preference">Choose Action bar\'s behavior(Android 3.0 and above)</string>
    <string name="dialog_title_actionbar_preference">Action bar\'s behavior</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose screen orientation action</string>
    <string name="dialog_title_orientation_preference">screen orientation action</string>
    <string name="text_preferences">Text</string>
    <string name="title_utf8_by_default_preference">Default use UTF-8</string>
    <string name="summary_utf8_by_default_preference">Using UTF-8 as default</string>
    <string name="title_fontsize_preference">Text size</string>
    <string name="summary_fontsize_preference">Choose text size</string>
    <string name="dialog_title_fontsize_preference">Text size</string>
    <string name="title_color_preference">Text color</string>
    <string name="summary_color_preference">Choose text color</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_backaction_preference">Back key behavior</string>
    <string name="summary_backaction_preference">Choose Back key behavior</string>
    <string name="dialog_title_backaction_preference">Back key behavior</string>
    <string name="title_controlkey_preference">Ctrl key</string>
    <string name="summary_controlkey_preference">Choose Ctrl key behavior</string>
    <string name="dialog_title_controlkey_preference">Ctrl key</string>
    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key behavior</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Terminal</string>
    <string name="summary_shell_preference">Choose Shell</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Automatic performance initial command when start</string>
    <string name="dialog_title_initialcommand_preference">Initial command</string>
    <string name="title_termtype_preference">Terminal type</string>
    <string name="summary_termtype_preference">Set Shell\'s Terminal type</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>
    <string name="title_close_window_on_process_exit_preference">Close terminal when exit</string>
    <string name="summary_close_window_on_process_exit_preference">Close terminal when exit</string>
    <string name="title_verify_path_preference">verify PATH</string>
    <string name="summary_verify_path_preference">Clear invalid PATH</string>
    <string name="title_do_path_extensions_preference">Allow PATH expand</string>
    <string name="summary_do_path_extensions_preference">Allow add command to PATH</string>
    <string name="title_allow_prepend_path_preference">Allow preposition PATH</string>
    <string name="summary_allow_prepend_path_preference">Allow override exist command in PATH</string>
    <string name="title_home_path_preference">HOME Folder</string>
    <string name="summary_home_path_preference">Use as HOME\'s writable path</string>
    <string name="control_key_dialog_title">Ctrl and Fn key</string>
    <string name="control_key_dialog_control_text">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
    <string name="control_key_dialog_control_disabled_text">Ctrl key unset</string>
    <string name="control_key_dialog_fn_text">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
    <string name="control_key_dialog_fn_disabled_text">Fn key unset</string>
    <string name="confirm_window_close_message">Close terminal?</string>
    <string name="email_transcript_subject">Copy terminal</string>
    <string name="feedback_email_subject">Feedback - QPython</string>
    <string name="email_transcript_chooser_title">Feedback …</string>
    <string name="email_transcript_no_email_activity_found">Can not find propriety App to send E-mail</string>
    <string name="alt_sends_esc">Use Alt as ESC</string>
    <string name="alt_sends_esc_summary_on">Using Alt as ESC</string>
    <string name="alt_sends_esc_summary_off">Cancel using Alt as ESC</string>
    <string name="title_mouse_tracking_preference">Send mouse event</string>
    <string name="summary_mouse_tracking_preference">Are touch and scroll event ignored?</string>
    <string name="dialog_title_script">script</string>
    <string name="dialog_title_project">project</string>
    <string name="title_use_keyboard_shortcuts">Use Keyboard Shortcuts</string>
    <string name="use_keyboard_shortcuts_summary_on">Ctrl-Tab: cycle terminal, Ctrl-Shift-N: new terminal, Ctrl-Shift-V: paste.</string>
    <string name="use_keyboard_shortcuts_summary_off">Keyboard shortcuts disabled.</string>
    <string name="help">Help</string>
    <string name="activity_term_here_title">Term here</string>
    <string name="enable_root">Enable root</string>
    <string name="root_mode">Root mode</string>
    <string name="disable_root">Disable</string>
    <string name="sl4a_running">SL4A server is running</string>
    <string name="sl4a_un_running">SL4A server is not running</string>
    <string name="key_reset">reset_storage</string>
    <string name="key_ftp_state">running_state</string>
    <string name="key_username">username</string>
    <string name="key_ftp_pwd">password</string>
    <string name="key_port_num">portNum</string>
    <string name="key_show_pwd">show_password</string>
    <string name="key_root_dir">chrootDir</string>
    <string name="key_stay_awake">stayAwake</string>
    <string name="course">QPython Courses</string>
    <string name="open_source_library_bili">Open Source Library (Bilibili)</string>
    <string name="log_noti">Log Notification</string>
    <string name="app_noti">App Notifications</string>
    <string name="noti">Notifications</string>
    <string name="last_log">Runtime log</string>
    <string name="get_last_log">Check last runtime log</string>
    <string name="get_help">Get support</string>
    <string name="get_support_from_community">Get support from community or feedback</string>
    <string name="key_root" translatable="false">root</string>
    <string name="key_sl4a" translatable="false">sl4a</string>
    <string name="ip_address">My IP Adress</string>
    <string name="screen_record">Screen Record</string>
    <string name="qpython_protect">QPython Background Protect</string>
    <string name="qpython_avoid_close">Open the hide suspension window to prevent QPython from being accidentally closed in the background</string>
    <string name="video_account_wechat">Official Video Account (WeChat)</string>
    <string name="bili_com">bilibili.com</string>
    <string name="wechat_com">mp.weixin.qq.com</string>
    <string name="qpy_custom_dir">QPython Custom Directory</string>
</resources>